testing can comunication with custom can lib, added documentation, extends the feature of PAC to have access to all the regiters

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ integrity_check_system = { git = "https://github.com/mrmonopoly-cyber/integrity_
 [dependencies.tc375-pac]
 registry = "bluewind"
 version = "0.0.1"
+features = [ "all" ]
 
 [dependencies.bw-r-drivers-tc37x]
 registry = "bluewind"
